--- a/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
@@ -1,141 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Admin Dashboard</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
     <link rel="stylesheet" href="~/css/theme.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/modal.css" asp-append-version="true" />
 </head>
+
 <body>
-    <nav class="sidenav navbar navbar-vertical fixed-left navbar-expand-xs navbar-dark bg-dark loopple-fixed-start" id="sidenav-main">
-    <div class="navbar-inner">
-        <div class="collapse navbar-collapse" id="sidenav-collapse-main">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <div class="logo-details">
-                        <a class="nav-link" aria-disabled="true">
-                            <i class="bx bx-user-circle"></i>
-                            <span class="logo-name" style="font-weight: 300; font-size: 15">Admin</span>
+    <nav class="sidenav navbar navbar-vertical fixed-left navbar-expand-xs navbar-dark bg-dark loopple-fixed-start"
+        id="sidenav-main">
+        <div class="navbar-inner">
+            <div class="collapse navbar-collapse" id="sidenav-collapse-main">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <div class="logo-details">
+                            <a class="nav-link" aria-disabled="true">
+                                <i class="bx bx-user-circle"></i>
+                                <span class="logo-name" style="font-weight: 300; font-size: 15">Admin</span>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Home" asp-action="Dashboard">
+                            <i class="bx bxs-grid-alt"></i>
+                            <span class="nav-link-text">Dashboard</span>
                         </a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Home" asp-action="Dashboard">
-                        <i class="bx bxs-grid-alt"></i>
-                        <span class="nav-link-text">Dashboard</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Clients" asp-action="ViewClients">
-                        <i class="fas fa-user-friends"></i>
-                        <span class="nav-link-text">Clients</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Employees" asp-action="ViewEmployees">
-                        <i class="fas fa-id-badge"></i>
-                        <span class="nav-link-text">Employees</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Packages" asp-action="ViewPackages">
-                        <i class="fas fa-cog"></i>
-                        <span class="nav-link-text">Packages</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Memberships" asp-action="ViewMemberships">
-                        <i class="bx bxs-universal-access" style="color: #ffffff"></i>
-                        <span class="nav-link-text">Memberships</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Classes" asp-action="ViewClasses">
-                        <i class="bx bx-dumbbell"></i>
-                        <span class="nav-link-text">Classes</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="SalesReport" asp-action="ViewSalesReport">
-                        <i class="fa fa-desktop"></i>
-                        <span class="nav-link-text">Reports</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Attendance" asp-action="ViewAttendance">
-                        <i class="fa fa-desktop"></i>
-                        <span class="nav-link-text">Attendance Tracking</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Home" asp-action="Login">
-                        <i class="fa fa-lock text-danger"></i>
-                        <span class="nav-link-text">Log out</span>
-                    </a>
-                </li>
-            </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Clients" asp-action="ViewClients">
+                            <i class="fas fa-user-friends"></i>
+                            <span class="nav-link-text">Clients</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Employees" asp-action="ViewEmployees">
+                            <i class="fas fa-id-badge"></i>
+                            <span class="nav-link-text">Employees</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Packages" asp-action="ViewPackages">
+                            <i class="fas fa-cog"></i>
+                            <span class="nav-link-text">Packages</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Memberships" asp-action="ViewMemberships">
+                            <i class="bx bxs-universal-access" style="color: #ffffff"></i>
+                            <span class="nav-link-text">Memberships</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Classes" asp-action="ViewClasses">
+                            <i class="bx bx-dumbbell"></i>
+                            <span class="nav-link-text">Classes</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="SalesReport" asp-action="ViewSalesReport">
+                            <i class="fa fa-desktop"></i>
+                            <span class="nav-link-text">Reports</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Attendance" asp-action="ViewAttendance">
+                            <i class="fa fa-desktop"></i>
+                            <span class="nav-link-text">Attendance Tracking</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Home" asp-action="Login">
+                            <i class="fa fa-lock text-danger"></i>
+                            <span class="nav-link-text">Log out</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
     <div class="main-content" id="panel">
         <nav class="navbar navbar-top navbar-expand navbar-dark border-bottom bg-warning" id="navbarTop">
-    <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-            <ul class="navbar-nav align-items-center  ml-md-auto ">
-                <li class="nav-item d-xl-none">
-                    <div class="pr-3 sidenav-toggler sidenav-toggler-dark active" data-action="sidenav-pin"
-                        data-target="#sidenav-main">
-                        <div class="sidenav-toggler-inner">
-                            <i class="sidenav-toggler-line"></i>
-                            <i class="sidenav-toggler-line"></i>
-                            <i class="sidenav-toggler-line"></i>
-                        </div>
-                    </div>
-                </li>
-
-            </ul>
-            <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">
-                <li class="nav-item dropdown">
-                    <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
-                        <div class="media align-items-center">
-                            <span class="avatar avatar-sm rounded-circle">
-                                @* <img alt="Image placeholder" th:src="@{/images/user icon.png}"> *@
-                            </span>
-                            <div class="media-body  ml-2  d-none d-lg-block">
-                                <span class="mb-0 text-sm  font-weight-bold">Admin</span>
+                    <ul class="navbar-nav align-items-center  ml-md-auto ">
+                        <li class="nav-item d-xl-none">
+                            <div class="pr-3 sidenav-toggler sidenav-toggler-dark active" data-action="sidenav-pin"
+                                data-target="#sidenav-main">
+                                <div class="sidenav-toggler-inner">
+                                    <i class="sidenav-toggler-line"></i>
+                                    <i class="sidenav-toggler-line"></i>
+                                    <i class="sidenav-toggler-line"></i>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                    <div class="dropdown-menu  dropdown-menu-right ">
-                        <div class="dropdown-header noti-title">
-                            <h6 class="text-overflow m-0">Welcome</h6>
-                        </div>
-                        <a href="#!" class="dropdown-item">
-                            <i class="fa fa-user"></i>
-                            <span>My profile</span>
-                        </a>
-                        <a href="#!" class="dropdown-item">
-                            <i class="fa fa-tools"></i>
-                            <span>Settings</span>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#!" class="dropdown-item">
-                            <i class="fa fa-sign-out-alt"></i>
-                            <span>Logout</span>
-                        </a>
-                    </div>
-                </li>
-            </ul>
-        </div>
+                        </li>
+
+                    </ul>
+                    <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                <div class="media align-items-center">
+                                    <span class="avatar avatar-sm rounded-circle">
+                                        @* <img alt="Image placeholder" th:src="@{/images/user icon.png}"> *@
+                                    </span>
+                                    <div class="media-body  ml-2  d-none d-lg-block">
+                                        <span class="mb-0 text-sm  font-weight-bold">Admin</span>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="dropdown-menu  dropdown-menu-right ">
+                                <div class="dropdown-header noti-title">
+                                    <h6 class="text-overflow m-0">Welcome</h6>
+                                </div>
+                                <a href="#!" class="dropdown-item">
+                                    <i class="fa fa-user"></i>
+                                    <span>My profile</span>
+                                </a>
+                                <a href="#!" class="dropdown-item">
+                                    <i class="fa fa-tools"></i>
+                                    <span>Settings</span>
+                                </a>
+                                <div class="dropdown-divider"></div>
+                                <a href="#!" class="dropdown-item">
+                                    <i class="fa fa-sign-out-alt"></i>
+                                    <span>Logout</span>
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        @RenderBody()
     </div>
-</nav>
-  @RenderBody()
-</div>
     <script
         src="https://rawcdn.githack.com/Loopple/loopple-public-assets/5cef8f62939eeb089fa26d4c53a49198de421e3d/argon-dashboard/js/vendor/jquery.min.js"></script>
     <script
@@ -149,6 +155,7 @@
         src="https://rawcdn.githack.com/Loopple/loopple-public-assets/7bb803d2af2ab6d71d429b0cb459c24a4cd0fbb4/argon-dashboard/js/argon.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        @await RenderSectionAsync("Scripts", required: false)
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
