--- a/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
@@ -77,7 +77,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Home" asp-action="Login">
+                        <a class="nav-link" asp-controller="Home" asp-action="Logout">
                             <i class="fa fa-lock text-danger"></i>
                             <span class="nav-link-text">Log out</span>
                         </a>
@@ -130,7 +130,7 @@
                                     <span>Settings</span>
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <a href="#!" class="dropdown-item">
+                                <a class="dropdown-item" asp-controller="Home" asp-action="Logout">
                                     <i class="fa fa-sign-out-alt"></i>
                                     <span>Logout</span>
                                 </a>
