--- a/Gym Web Application/Gym Web Application/Views/SalesReport/ViewSalesReport.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/SalesReport/ViewSalesReport.cshtml
@@ -38,3 +38,9 @@
         </div>
     </div>
 </div>
+
+<form id="generateReportForm" method="post" action="/SalesReport/GetLatestSalesReport">
+    <button id="generateReport" id="generateReport" class="btn btn-primary">Generate</button>
+ </form>
+
+ 
