fixed a logical error

--- a/Gym Web Application/Gym Web Application/Views/SalesReport/ViewSalesReport.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/SalesReport/ViewSalesReport.cshtml
@@ -39,7 +39,7 @@
     </div>
 </div>
 
-<form id="generateReportForm" method="post" action="/SalesReport/GetLatestSalesReport">
+<form method="post" action="/SalesReport/GenerateAndNotify">
     <button id="generateReport" id="generateReport" class="btn btn-primary">Generate</button>
  </form>
 
