--- a/Gym Web Application/Gym Web Application/Views/SalesReport/ViewSalesReport.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/SalesReport/ViewSalesReport.cshtml
@@ -1,5 +1,12 @@
 @model Gym_Web_Application.Models.SalesReportModel
 
+<style>
+    #generateReport{
+        transform: translateX(-20px);
+        
+    }
+</style>
+
 <div class="container-fluid pt-3">
     <div class="row removable">
         <div class="col-lg">
@@ -39,8 +46,13 @@
     </div>
 </div>
 
+    <div class="row mt-3">
+        <div class="col text-right">
+
 <form method="post" action="/SalesReport/GenerateAndNotify">
     <button id="generateReport" id="generateReport" class="btn btn-primary">Generate</button>
  </form>
+        </div>
+    </div>
 
  
